--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -104,7 +104,7 @@
 
 在菜单中选择 **OK** 将确认其控制的操作。选择 **Cancel** 将取消操作并通常返回上一级菜单。使用 **TAB** 可移动光标并选择按钮。
 
-大多数屏幕都有 **Help** 按钮 —— 请善用它！ 它通常提供有用的上下文相关提示，如果你在某个配置菜单中不确定该做什么，请选择 **Help**！
+大多数界面都有 **Help** 按钮——请善用它！ 它通常提供有用的上下文相关提示，如果你在某个配置菜单中不确定该做什么，请选择 **Help**！
 
 **特殊功能**
 
@@ -437,3 +437,434 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 | Group Members: | 组成员： |
 
 ## 7 Console 终端
+
+```sh
+                 ┌───────────────────┤System Console Configuration├────────────────────┐
+                 │ The system console driver for FreeBSD has a number of configuration │
+                 │ options which may be set according to your preference.              │
+                 │                                                                     │
+                 │ When you are done setting configuration options, select Cancel.     │
+                 │ ┌─────────────────────────────────────────────────────────────────┐ │
+                 │ │          X Exit      Exit this menu                             │ │
+                 │ │          2 Font      Choose an alternate screen font            │ │
+                 │ │          3 Keymap    Choose an alternate keyboard map           │ │
+                 │ │          4 Repeat    Set the rate at which keys repeat          │ │
+                 │ │          5 Saver     Configure the screen saver                 │ │
+                 │ │          6 Screenmap Choose an alternate screenmap              │ │
+                 │ │          7 Ttys      Choose console terminal type               │ │
+                 │ └─────────────────────────────────────────────────────────────────┘ │
+                 ├─────────────────────────────────────────────────────────────────────┤
+                 │                        [  OK  ]     [Cancel]                        │
+                 └────────────── Configure your system console settings ───────────────┘
+
+```
+
+
+| 菜单 | 说明 |
+| --- | --- |
+| X Exit | 退出此菜单 |
+| 2 Font | 选择备用屏幕字体 |
+| 3 Keymap | 选择备用键盘布局 |
+| 4 Repeat | 设置按键重复速率 |
+| 5 Saver | 配置屏幕保护程序 |
+| 6 Screenmap | 选择备用屏幕映射 |
+| 7 Ttys | 选择控制台终端类型 |
+
+- “2 Font”对中文用户无意义。西欧国家使用。
+- “5 Saver” 配置屏幕保护程序参见其他章节。
+- “6 Screenmap”对中文用户无意义。西欧国家使用。
+- “7 Ttys”对中文用户无意义。西欧或俄罗斯等区域使用
+
+
+## 8 Timezone 时区
+
+配置同 `bsdinstall`，不再赘述。
+
+## 9 Mous 鼠标
+
+你可以运行 mouse 鼠标守护进程来在文本控制台中进行剪切和粘贴。指定一个端口和鼠标的协议类型，然后启用 mouse 鼠标守护进程。如果你不想使用此功能，可以选择 6 来禁用守护进程。  
+启用鼠标守护进程后，您可以在运行 X 配置工具时将 `/dev/sysmouse` 作为鼠标设备，并将 `SysMouse` 或 `MouseSystems` 作为鼠标协议（参见配置菜单）。
+
+```sh
+               ┌──────────────────────┤Please configure your mouse├─────────────────────┐
+               │ You can cut and paste text in the text console by running the mouse    │
+               │ daemon.  Specify a port and a protocol type of your mouse and enable   │
+               │ the mouse daemon.  If you don't want this feature, select 6 to disable │
+               │ the daemon.                                                            │
+               │ Once you've enabled the mouse daemon, you can specify "/dev/sysmouse"  │
+               │ as your mouse device and "SysMouse" or "MouseSystems" as mouse         │
+               │ protocol when running the X configuration utility (see Configuration   │
+               │ menu).                                                                 │
+               │ ┌────────────────────────────────────────────────────────────────────┐ │
+               │ │               X Exit    Exit this menu                             │ │
+               │ │               2 Enable  Test and run the mouse daemon              │ │
+               │ │               3 Type    Select mouse protocol type                 │ │
+               │ │               4 Port    Select mouse port                          │ │
+               │ │               5 Flags   Set additional flags                       │ │
+               │ │               6 Disable Disable the mouse daemon                   │ │
+               │ └────────────────────────────────────────────────────────────────────┘ │
+               ├────────────────────────────────────────────────────────────────────────┤
+               │                          [  OK  ]     [Cancel]                         │
+               └────────────────────────────────────────────────────────────────────────┘
+```
+
+|菜单 | 说明 |
+| --- | --- |
+| X Exit | 退出此菜单 |
+| 2 Enable | 启用测试并运行鼠标守护进程 |
+| 3 Type | 选择鼠标协议类型 |
+| 4 Port | 选择鼠标端口 |
+| 5 Flags | 设置附加参数 |
+| 6 Disable | 禁用鼠标守护进程 |
+
+### 2 Enable 启用测试并运行鼠标守护进程
+
+```sh
+                         ┌────────────┤User Confirmation Requested├───────────┐
+                         │ Now move the mouse and see if it works.            │
+                         │ (Note that buttons don't have any effect for now.) │
+                         │                                                    │
+                         │          Is the mouse cursor moving?               │
+                         │                                                    │
+                         ├────────────────────────────────────────────────────┤
+                         │                [ Yes  ]     [  No  ]               │
+                         └──────────── Press arrows, TAB or ENTER ────────────┘
+
+现在移动鼠标，看看鼠标是否能动。  
+（请注意，鼠标的按钮目前无效。）  
+鼠标光标是否在移动？                     
+```
+
+### 3 Type 选择鼠标协议类型
+
+如果你的鼠标连接到 PS/2 鼠标端口和总线鼠标端口，你应该始终选择“Auto”，无论鼠标的型号和品牌是什么。所有其他协议类型适用于串口鼠标，不应与 PS/2 端口鼠标或总线鼠标一起使用。如果你有串口鼠标，并且不确定它的协议，你也应该尝试选择“Auto”。如果鼠标不支持即插即用（PnP）标准，可能无法正常工作，但也不会有坏处。许多 2 按钮（左键和右键）串口鼠标与“Microsoft”或“MouseMan”兼容，3 按钮串口鼠标（左右键、中间按钮）可能与“MouseSystems”或“MouseMan”兼容。如果串口鼠标有滚轮，它可能与“IntelliMouse”兼容。
+
+```sh
+              ┌──────────────────┤Select a protocol type for your mouse├──────────────────┐
+              │ If your mouse is attached to the PS/2 mouse port or the bus mouse port,   │
+              │ you should always choose "Auto", regardless of the model and the brand    │
+              │ of the mouse.  All other protocol types are for serial mice and should    │
+              │ not be used with the PS/2 port mouse or the bus mouse.  If you have       │
+              │ a serial mouse and are not sure about its protocol, you should also try   │
+              │ "Auto".  It may not work for the serial mouse if the mouse does not       │
+              │ support the PnP standard.  But, it won't hurt.  Many 2-button serial mice │
+              │ are compatible with "Microsoft" or "MouseMan". 3-button serial mice       │
+              │ may be compatible with "MouseSystems" or "MouseMan".  If the serial       │
+              │ mouse has a wheel, it may be compatible with "IntelliMouse".              │
+              │ ┌───────────────────────────────────────────────────────────────────────┐ │
+              │ │    1 Auto          Bus mouse, PS/2 style mouse or PnP serial mouse    │ │
+              │ │    2 GlidePoint    ALPS GlidePoint pad (serial)                       │ │
+              │ │    3 Hitachi       Hitachi tablet (serial)                            │ │
+              │ │    4 IntelliMouse  Microsoft IntelliMouse (serial)                    │ │
+              │ │    5 Logitech      Logitech protocol (old models) (serial)            │ │
+              │ │    6 Microsoft     Microsoft protocol (serial)                        │ │
+              │ │    7 MM Series     MM Series protocol (serial)                        │ │
+              │ │    8 MouseMan      Logitech MouseMan/TrackMan models (serial)         │ │
+              │ │    9 MouseSystems  MouseSystems protocol (serial)                     │ │
+              │ │    A ThinkingMouse Kensington ThinkingMouse (serial)                  │ │
+              │ └───────────────────────────────────────────────────────────────────────┘ │
+              ├───────────────────────────────────────────────────────────────────────────┤
+              │                           [  OK  ]     [Cancel]                           │
+              └───────────────────────────────────────────────────────────────────────────┘
+```
+
+| 菜单 | 说明 |
+| --- | --- |
+| 1 Auto | 总线鼠标，PS/2 风格鼠标或 PnP 串口鼠标 |
+| 2 GlidePoint | ALPS GlidePoint 触摸板（串口） |
+| 3 Hitachi | 日立平板（串口） |
+| 4 IntelliMouse | 微软 IntelliMouse（串口） |
+| 5 Logitech | Logitech 协议（旧型号）（串口） |
+| 6 Microsoft | 微软协议（串口） |
+| 7 MM Series | MM 系列协议（串口） |
+| 8 MouseMan | Logitech MouseMan/TrackMan 型号（串口） |
+| 9 MouseSystems | MouseSystems 协议（串口） |
+| A ThinkingMouse | Kensington ThinkingMouse（串口） |
+
+## A Networking Management 网络管理
+
+```sh
+
+                                 ┌────────┤Network Management├────────┐
+                                 │ ┌────────────────────────────────┐ │
+                                 │ │    X Exit                      │ │
+                                 │ │    1 Hostname/Domain           │ │
+                                 │ │    2 Network Interfaces        │ │
+                                 │ │    3 Wireless Networks         │ │
+                                 │ │    4 Default Router/Gateway    │ │
+                                 │ │    5 DNS nameservers           │ │
+                                 │ └────────────────────────────────┘ │
+                                 ├────────────────────────────────────┤
+                                 │        [  OK  ]     [Cancel]       │
+                                 └──── Press arrows, TAB or ENTER ────┘
+
+```
+| 菜单 | 说明|
+| --- | --- |
+| X Exit | 退出 |
+| 1 Hostname/Domain | 主机名/域名 |
+| 2 Network Interfaces | 网络接口 |
+| 3 Wireless Networks | 无线网络 |
+| 4 Default Router/Gateway | 默认路由/默认网关 |
+| 5 DNS nameservers | DNS 域名服务器 |
+
+
+## B Security 安全
+
+此菜单能让你配置操作系统安全策略的各方面。请在修改这些设置之前仔细阅读系统文档，因为不当操作可能会导致服务中断。
+
+大多数设置只有在系统重启后才会生效。
+
+```sh
+
+             ┌───────────────────────┤System Security Options Menu├───────────────────────┐
+             │ This menu allows you to configure aspects of the operating system security │
+             │ policy.  Please read the system documentation carefully before modifying   │
+             │ these settings, as they may cause service disruption if used improperly.   │
+             │                                                                            │
+             │ Most settings will take effect only following a system reboot.             │
+             │ ┌────────────────────────────────────────────────────────────────────────┐ │
+             │ │    X Exit            Exit this menu                                    │ │
+             │ │    2 [ ] Securelevel Configure securelevels for the system             │ │
+             │ │    3 [X] NFS port    Require that the NFS clients use reserved ports   │ │
+             │ └────────────────────────────────────────────────────────────────────────┘ │
+             ├────────────────────────────────────────────────────────────────────────────┤
+             │                            [  OK  ]     [Cancel]                           │
+             └──────────────────────── Press arrows, TAB or ENTER ────────────────────────┘
+
+```
+
+|  菜单| 解释 |
+|------|------|
+| X Exit | 退出此菜单 |
+| 2 [ ] Securelevel | 配置系统的安全级别 |
+| 3 [X] NFS port | 要求 NFS 客户端使用保留端口 |
+
+###  `2 [ ] Securelevel` 配置系统的安全级别 
+
+此菜单能让你选择系统运行的安全级别。  
+
+在 securelevel 安全级别下，某些 root 权限会被禁用，这可能增加对攻击的抵抗力并保护系统完整性。
+
+
+```sh
+              ┌─────────────────────┤Securelevel Configuration Menu├─────────────────────┐
+              │ This menu allows you to select the securelevel your system runs with.    │
+              │ When operating at a securelevel, certain root privileges are disabled,   │
+              │ which may increase resistance to exploits and protect system integrity.  │
+              │ In secure mode system flags may not be overridden by the root user,      │
+              │ access to direct kernel memory is limited, and kernel modules may not    │
+              │ be changed.  In highly secure mode, mounted file systems may not be      │
+              │ modified on-disk, tampering with the system clock is prohibited.  In     │
+              │ network secure mode configuration changes to firewalling are prohibited. │
+              │                                                                          │
+              │ ┌──────────────────────────────────────────────────────────────────────┐ │
+              │ │                  Disabled       Disable securelevels                 │ │
+              │ │                  Secure         Secure mode                          │ │
+              │ │                  Highly Secure  Highly secure mode                   │ │
+              │ │                  Network Secure Network secure mode                  │ │
+              │ └──────────────────────────────────────────────────────────────────────┘ │
+              ├──────────────────────────────────────────────────────────────────────────┤
+              │                    [  OK  ]     [Cancel]     [ Help ]                    │
+              └─────────────────── Select a securelevel to operate at ───────────────────┘
+
+```
+
+- 在 Secure 安全模式下，root 用户覆盖不能系统标志（参数或配置），访问内核内存的权限受到限制，且不能更改内核模块。  
+- 在 Highly Secure 高安全模式下，无法直接修改挂载的文件系统，无法修改系统时钟。
+- 在 Network Secure 网络安全模式下，禁止修改防火墙配置。
+
+## C Startup 启动项
+
+```sh
+                               ┌────────────────┤Startup├───────────────┐
+                               │ ┌────────────────────────────────────┐ │
+                               │ │  X Exit                            │ │
+                               │ │  1 Toggle Startup Services         │ │
+                               │ │  2 View/Edit Startup Configuration │ │
+                               │ │  3 Miscellaneous Startup Services  │ │
+                               │ └────────────────────────────────────┘ │
+                               ├────────────────────────────────────────┤
+                               │          [  OK  ]     [Cancel]         │
+                               └────── Press arrows, TAB or ENTER ──────┘
+```
+
+| 菜单 |说明|
+| --- | --- |
+| X Exit | X 退出 |
+| 1 Toggle Startup Services | 1 切换启动服务 |
+| 2 View/Edit Startup Configuration | 2 查看启动配置/编辑启动配置 |
+| 3 Miscellaneous Startup Services | 3 其他启动服务 |
+
+###  1 Toggle Startup Services 1 切换启动服务
+
+```sh
+         ┌──────────────────────────────┤Toggle Startup Services├──────────────────────────────┐
+         │ ┌─────────────────────────────────────────────────────────────────────────────────┐ │
+         │ │ X Exit                     Exit this menu                                       │ │
+         │ │ accounting_enable          [ ] /etc/rc.d/accounting; Default: NO                │ │
+         │ │  apm_enable                [ ] /etc/rc.d/apm; Default: NO                       │ │
+         │ │  auditd_enable             [ ] /etc/rc.d/auditd; Default: NO                    │ │
+         │ │  auditdistd_enable         [ ] /etc/rc.d/auditdistd; Default: NO                │ │
+         │ │  autofs_enable             [ ] /etc/rc.d/automount; Default: NO                 │ │
+         │ │  autofs_enable             [ ] /etc/rc.d/automountd; Default: NO                │ │
+         │ │  autofs_enable             [ ] /etc/rc.d/autounmountd; Default: NO              │ │
+         │ │  avahi_daemon_enable       [ ] /usr/local/etc/rc.d/avahi-daemon; Default: NO    │ │
+         │ │  avahi_dnsconfd_enable     [ ] /usr/local/etc/rc.d/avahi-dnsconfd; Default: NO  │ │
+         │ │ background_fsck            [X] /etc/rc.d/bgfsck; Default: YES                   │ │
+         │ │  blacklistd_enable         [ ] /etc/rc.d/blacklistd; Default: NO                │ │
+         │ │  bootparamd_enable         [ ] /etc/rc.d/bootparams; Default: NO                │ │
+         │ │  bsnmpd_enable             [ ] /etc/rc.d/bsnmpd; Default: NO                    │ │
+         │ │  bthidd_enable             [ ] /etc/rc.d/bthidd; Default: NO                    │ │
+         │ │ cfumass_enable             [ ] /etc/rc.d/cfumass; Default: NO                   │ │
+         │ │  cleanvar_enable           [X] /etc/rc.d/cleanvar; Default: YES                 │ │
+         │ │  cron_enable               [X] /etc/rc.d/cron; Default: YES                     │ │
+         │ │  ctld_enable               [ ] /etc/rc.d/ctld; Default: NO                      │ │
+         │ │  cupsd_enable              [ ] /usr/local/etc/rc.d/cupsd; Default: NO           │ │
+         │ │ dbus_enable                [X] /usr/local/etc/rc.d/dbus; Default: YES           │ │
+         │ │  ddb_enable                [ ] /etc/rc.d/ddb; Default: NO                       │ │
+         │ │  devd_enable               [X] /etc/rc.d/devd; Default: YES                     │ │
+         │ │  devmatch_enable           [X] /etc/rc.d/devmatch; Default: YES                 │ │
+         │ └─↓↓↓──────────────────────────────────────────────────────────────────────── 17%─┘ │
+         ├─────────────────────────────────────────────────────────────────────────────────────┤
+         │                                [  OK  ]     [Cancel]                                │
+         └──────────────────────────── Press arrows, TAB or ENTER ─────────────────────────────┘
+```
+
+可以开关当前所有可能的系统启动项。
+
+### 2 View/Edit Startup Configuration 2 查看启动配置/编辑启动配置 
+
+```sh
+                          ┌─────────┤View/Edit Startup Configuration├────────┐
+                          │ ┌──────────────────────────────────────────────┐ │
+                          │ │  X Exit              Return to previous menu │ │
+                          │ │  > Add New           Add new directive       │ │
+                          │ │  > Delete            Delete directive(s)     │ │
+                          │ │  blanktime           300                     │ │
+                          │ │  dbus_enable         YES                     │ │
+                          │ │   dumpdev            AUTO                    │ │
+                          │ │  firewall_enable     NO                      │ │
+                          │ │  gateway_enable      YES                     │ │
+                          │ │  hostname            ykla                    │ │
+                          │ │  ifconfig_igc0       DHCP                    │ │
+                          │ │   ifconfig_igc0_ipv6 inet6 accept_rtadv      │ │
+                          │ │  kld_list            i915kms fusefs          │ │
+                          │ │  lightdm_enable      YES                     │ │
+                          │ │  moused_enable       YES                     │ │
+                          │ │  ntpd_enable         YES                     │ │
+                          │ │   ntpd_sync_on_start YES                     │ │
+                          │ │  powerd_enable       YES                     │ │
+                          │ │  resolv_enable       NO                      │ │
+                          │ │  saver               beastie                 │ │
+                          │ │   sshd_enable        YES                     │ │
+                          │ │  xrdp_enable         YES                     │ │
+                          │ │   xrdp_sesman_enable YES                     │ │
+                          │ │  zfs_enable          YES                     │ │
+                          │ └──────────────────────────────────────────────┘ │
+                          ├──────────────────────────────────────────────────┤
+                          │       [  OK   ]     [Cancel ]     [Details]      │
+                          └─────────── Press arrows, TAB or ENTER ───────────┘
+
+```
+
+| 菜单 | 说明 |
+| --- | --- |
+| X Exit Return to previous menu | X 退出 返回上一级菜单 |
+| > Add New Add new directive | > 添加 新增指令 |
+| > Delete Delete directive(s) | > 删除 删除指令 |
+
+查看配置当前正在使用的的启动项。
+
+#### Details 详情
+
+```sh
+               ┌──────────────────────────┤Choose View Details├─────────────────────────┐
+               │ ┌────────────────────────────────────────────────────────────────────┐ │
+               │ │  R Reset                  Reset to default view settings           │ │
+               │ │  D [X] Description        Toggle display of system description     │ │
+               │ │  1 (*) Show Value         Show configured startup value (fast)     │ │
+               │ │  2 ( ) Show Default/Value Show default/configured values (slow)    │ │
+               │ │  3 ( ) Show Configured    Calculate rc.conf(5) locations (slowest) │ │
+               │ └────────────────────────────────────────────────────────────────────┘ │
+               ├────────────────────────────────────────────────────────────────────────┤
+               │                          [  OK  ]     [Cancel]                         │
+               └────────────────────── Press arrows, TAB or ENTER ──────────────────────┘
+```
+
+
+| 菜单 | 解释 |
+| --- | --- |
+| R Reset Reset to default view settings | R 重置 恢复默认视图设置 |
+| D [X] Description Toggle display of system description | D [X] 描述 切换显示系统描述 |
+| 1 (*) Show Value Show configured startup value (fast) | 1 (*) 显示值 显示已配置的启动值（加载速度快速） |
+| 2 ( ) Show Default/Value Show default/configured values (slow) | 2 ( ) 显示默认/值 显示默认值/已配置的值（加载速度较慢） |
+| 3 ( ) Show Configured Calculate rc.conf(5) locations (slowest) | 3 ( ) 显示配置 计算 rc.conf(5) 的位置（加载速度最慢） |
+
+### 3 Miscellaneous Startup Services 3 其他启动服务
+
+此菜单能让你配置系统启动配置的各个方面。
+
+```sh
+             ┌──────────────────────┤Miscellaneous Startup Services├──────────────────────┐
+             │ This menu allows you to configure various aspects of your system's         │
+             │ startup configuration.  Use [SPACE] or [ENTER] to select items, and        │
+             │ [TAB] to move to the buttons.  Select Exit to leave this menu.             │
+             │ ┌────────────────────────────────────────────────────────────────────────┐ │
+             │ │  X Exit               Exit this menu                                   │ │
+             │ │                        --                                              │ │
+             │ │  1 [X] Startup dirs   Set the list of dirs to look for startup scripts │ │
+             │ │  2 [ ] named          Run a local name server on this host             │ │
+             │ │  3 [ ] named flags    Set default flags to named (if enabled)          │ │
+             │ │  4 [ ] NIS client     This host wishes to be an NIS client.            │ │
+             │ │  5 [ ] NIS domainname Set NIS domainname (if enabled)                  │ │
+             │ │  6 [ ] NIS Server     This host wishes to be an NIS server.            │ │
+             │ │                        --                                              │ │
+             │ │  7 [ ] Accounting     This host wishes to run process accounting.      │ │
+             │ │  8 [ ] lpd            This host has a printer and wants to run lpd.    │ │
+             │ └────────────────────────────────────────────────────────────────────────┘ │
+             ├────────────────────────────────────────────────────────────────────────────┤
+             │                            [  OK  ]     [Cancel]                           │
+             └──────────────────────── Press arrows, TAB or ENTER ────────────────────────┘
+```
+
+使用 [空格键] 或 [回车键] 选择项目，使用 [TAB] 移动到按钮。选择 Exit 以离开此菜单。
+
+
+| 菜单 | 解释 |
+| --- | --- |
+| X Exit Exit this menu | X 退出 退出此菜单 |
+| -- | -- |
+| 1 [X] Startup dirs Set the list of dirs to look for startup scripts | 1 [X] 启动目录 设置查找启动脚本的目录列表 |
+| 2 [ ] named Run a local name server on this host | 2 [ ] named 在此主机上运行本地域名服务器 |
+| 3 [ ] named flags Set default flags to named (if enabled) | 3 [ ] named 参数 设置默认的 named 参数（如果启用） |
+| 4 [ ] NIS client This host will be an NIS client | 4 [ ] NIS 客户端 此主机将作为 NIS 客户端 |
+| 5 [ ] NIS domainname Set NIS domainname (if enabled) | 5 [ ] NIS 域名 设置 NIS 域名（如启用） |
+| 6 [ ] NIS Server This host will be an NIS server | 6 [ ] NIS 服务器 此主机将作为 NIS 服务器 |
+| -- | 分割线 |
+| 7 [ ] Accounting This host will run process accounting | 7 [ ] 记账 此主机将运行进程记账 |
+| 8 [ ] lpd This host has a printer and will run lpd | 8 [ ] lpd 此主机有打印机且需运行 lpd |
+
+
+## D Ttys TTY
+
+```sh
+                  ┌───────────────────┤User Confirmation Requested├───────────────────┐
+                  │ Configuration of system TTYs requires editing the /etc/ttys file. │
+                  │ Typical configuration activities might include enabling getty(8)  │
+                  │ on the first serial port to allow login via serial console after  │
+                  │ reboot, or to enable xdm.  The default ttys file enables normal   │
+                  │ virtual consoles, and most sites will not need to perform manual  │
+                  │ configuration.                                                    │
+                  │                                                                   │
+                  │ To load /etc/ttys in the editor, select [Yes], otherwise, [No].   │
+                  ├───────────────────────────────────────────────────────────────────┤
+                  │                       [ Yes  ]     [  No  ]                       │
+                  └─────────────────── Press arrows, TAB or ENTER ────────────────────┘
+
+系统 TTY 的配置需要编辑 /etc/ttys 文件。典型的配置活动可能包括启用第一个串口上的 getty(8)，以允许在重启后通过串口控制台登录，或者启用 xdm。默认的 ttys 文件启用了正常的虚拟控制台，大多数站点无需进行手动配置。
+
+要在编辑器中加载 /etc/ttys 文件，选择 [Yes]，否则选择 [No]。
+```
+
+如果选择 `[Yes]`，会使用文本编辑器打开 `/etc/ttys`。
