--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -1,5 +1,7 @@
 # 第 24.3 节 bsdconfig 系统配置工具
 
+`bsdconfig` 能让你在安装后对系统进行配置。
+
 `bsdconfig` 源代码在 <https://github.com/freebsd/freebsd-src/tree/main/usr.sbin/bsdconfig>
 
 >**技巧**
@@ -7,6 +9,7 @@
 >`bsdconfig` 也支持纯字符命令行，参见 [bsdconfig(8)](https://man.freebsd.org/cgi/man.cgi?bsdconfig(8))。
 
 ## `bsdconfig` 主菜单
+
 
 如果你已经安装了 FreeBSD，可以使用此菜单对其进行一定程度的自定义，以适应你的自定义配置。最重要的是，你可以使用 pkg 工具加载额外的“第三方”软件，这些软件未包含在基本系统中。需要注意的是，该界面无法连接 WiFi，因为无法输入密码，已经报告 bug——[Cannot select any wifi or input password in bsdconfig](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=229883)。
 
