--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -35,11 +35,59 @@ autoboot_delay="2"
 
 ## 屏幕保护
 
+在默认情况下，控制台驱动程序在屏幕空闲时不会做任何特殊处理。如果你预计长时间让显示器保持开启并处于空闲状态，那么您应该启用其中某个屏幕保护程序以防止烧屏。
+
 ### `bsdconfig`
 
 ```sh
 # bsdconfig
 ```
+
+```sh
+                ┌─────────────────────┤System Console Screen Saver├─────────────────────┐
+                │ By default, the console driver will not attempt to do anything        │
+                │ special with your screen when it's idle.  If you expect to leave your │
+                │ monitor switched on and idle for long periods of time then you should │
+                │ probably enable one of these screen savers to prevent burn-in.        │
+                │ ┌───────────────────────────────────────────────────────────────────┐ │
+                │ │   1 None    Disable the screensaver                               │ │
+                │ │   2 Blank   Blank screen                                          │ │
+                │ │   3 Beastie "BSD Daemon" animated screen saver (graphics)         │ │
+                │ │   4 Daemon  "BSD Daemon" animated screen saver (text)             │ │
+                │ │   5 Dragon  Dragon screensaver (graphics)                         │ │
+                │ │   6 Fade    Fade out effect screen saver                          │ │
+                │ │   7 Fire    Flames effect screen saver                            │ │
+                │ │   8 Green   "Green" power saving mode (if supported by monitor)   │ │
+                │ │   9 Logo    FreeBSD "logo" animated screen saver (graphics)       │ │
+                │ │   a Rain    Rain drops screen saver                               │ │
+                │ │   b Snake   Draw a FreeBSD "snake" on your screen                 │ │
+                │ │   c Star    A "twinkling stars" effect                            │ │
+                │ │   d Warp    A "stars warping" effect                              │ │
+                │ │   Timeout   Set the screen saver timeout interval                 │ │
+                │ └───────────────────────────────────────────────────────────────────┘ │
+                ├───────────────────────────────────────────────────────────────────────┤
+                │                         [  OK  ]     [Cancel]                         │
+                └───────────────── Choose a nifty-looking screen saver ─────────────────┘
+
+```
+
+| 菜单 | 解释 |
+| --- | --- |
+| 1 None Disable the screensaver | 1 无 禁用屏幕保护程序 |
+| 2 Blank Blank screen | 2 空白 显示空白屏幕 |
+| 3 Beastie "BSD Daemon" animated screen saver (graphics) | 3 Beastie "BSD Daemon" 动画屏幕保护程序（图形） |
+| 4 Daemon "BSD Daemon" animated screen saver (text) | 4 Daemon "BSD Daemon" 动画屏幕保护程序（文字） |
+| 5 Dragon Dragon screensaver (graphics) | 5 龙 动画屏幕保护程序（图形） |
+| 6 Fade Fade out effect screen saver | 6 淡出 屏幕保护程序淡出效果 |
+| 7 Fire Flames effect screen saver | 7 火焰 火焰效果屏幕保护程序 |
+| 8 Green "Green" power saving mode (if supported by monitor) | 8 绿色 “绿色”省电模式（如果显示器支持） |
+| 9 Logo FreeBSD "logo" animated screen saver (graphics) | 9 标志 FreeBSD “logo”动画屏幕保护程序（图形） |
+| a Rain Rain drops screen saver | a 雨滴 雨滴屏幕保护程序 |
+| b Snake Draw a FreeBSD "snake" on your screen | b 蛇 在屏幕上绘制 FreeBSD “蛇” |
+| c Star A "twinkling stars" effect | c 星星 闪烁星星效果 |
+| d Warp A "stars warping" effect | d 扭曲 星星扭曲效果 |
+| Timeout Set the screen saver timeout interval | 超时 设置屏幕保护程序超时时间 |
+
 
 选择屏保图片：主菜单中的 `7 Console`——>`5 Saver     Configure the screen saver`——>此处我选择 `3 Beastie "BSD Daemon" animated screen saver (graphics)`。
 
@@ -55,6 +103,8 @@ blanktime="300" # 屏幕超时时间
 ```
 
 有哪些图片可选：
+
+
 
 ```sh
 root@ykla:~ # ls /boot/kernel/*saver*
